# blackhat-simulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE  README.md  README_WIP.md  dark_theme_inject.css  index.html  inject.sh  main.py  myfetch.c  packages.json  requirements.txt  test  todo  todo.md  usefulresources.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: client_tests.yml  deploy_docs.yml
OLD/client/blackhat/: __init__.py  computer.py  fs.py  helpers.py  shell.py  users.py
base/sbin/: init
blackhat/: computer.py  process.py
blackhat/fs/: __init__.py  mapping.py
blackhat/fs/filesystems/ext4/: __init__.py  ext4_setup.py
blackhat/userland/sbin/: init.js
blackhat/util/: result.py  time.py
blackhat/util/JSInterpreter/: __init__.py  stdio.js
client/: __init__.py  main.py  packages.json  requirements.txt
client/blackhat/: __init__.py  computer.py  fs.py  helpers.py  session.py  shell.py  user.py  users.py
client/blackhat/database/: init_tables.sql
client/blackhat/lib/: __init__.py  dirent.py  fcntl.py  ifaddrs.py  input.py  netdb.py  output.py  pwd.py  stdio.py  stdlib.py  unistd.py
client/blackhat/lib/arpa/: __init__.py  inet.py
client/blackhat/lib/sys/: __init__.py  socket.py  stat.py  time.py
client/blackhat/services/: __init__.py  aptserver.py  dnsserver.py  pingserver.py  service.py  sshserver.py  webserver.py  whoisserver.py
client/blackhat/tests/: __init__.py  check_missing.py  setup_computers_universal.py  test_binaries.py
client/docs/blackhat/: computer.html  fs.html  helpers.html  index.html  session.html  shell.html  user.html
client/docs/blackhat/lib/: dirent.html  fcntl.html  ifaddrs.html  index.html  input.html  (+6 more)
docs/blackhat/: computer.html  fs.html  helpers.html  session.html  shell.html  user.html
docs/blackhat/lib/: fcntl.html  ifaddrs.html  input.html  output.html  stdio.html  stdlib.html  unistd.html
docs/blackhat/services/: webserver.html  whoisserver.html
docs/blackhat/tests/: check_missing.html  index.html  setup_computers_universal.html  test_binaries.html
docs/client/: index.html
docs/client/blackhat/: computer.html  fs.html  helpers.html  index.html  session.html  shell.html  user.html
errors/: 403.html  404.html  errors.js
include/blackhat/: computer.h  global_computer.h  interpreter.h  process.h  user.h  vm.h
include/blackhat/fs/: basefs.h  ext4.h  file_descriptor.h  filesystem.h  procfs.h
include/util/: crypto.h  errno.h  string.h  time.h
src/: main.cpp
src/blackhat/: computer.cpp  global_computer.cpp  interpreter.cpp  process.cpp  user.cpp
src/blackhat/fs/: ext4.cpp  file_descriptor.cpp  procfs.cpp
src/util/: crypto.cpp  string.cpp  time.cpp
test/: CMakeLists.txt  test.cpp
website/: dark_theme_inject.css  index.html  inject.sh
website/docs/blackhat/: fs.html  helpers.html  index.html  session.html  shell.html
website/docs/client/: index.html
website/errors/: 403.html  errors.css  fonts.css
(+78 files in other folders)
